--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,7 @@
-# Django
-*.log
-*.pot
-*.pyc
-__pycache__/
-local_settings.py
+venv
 db.sqlite3
-db.sqlite3-journal
-media/
-staticfiles/
-
-# Environment variables
-.env
-
-# Virtual environment
-venv/
-env/
-
-# IDE
-.vscode/
-.idea/
-
-# OS
+.vscode
+pycache
+*.pyc
 .DS_Store
-Thumbs.db
+.env
