--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Django>=4.2,<5.0
-gunicorn>=20.1.0
-psycopg2-binary>=2.9.0
-whitenoise>=6.0.0
-python-decouple>=3.6
-dj-database-url>=2.0.0
+django==4.2
+dj-database-url
+dj-static
+python-decouple
+django-environ
+gunicorn
+psycopg2-binary
+whitenoise
+django-bootstrap5
